deploy/kubernetes/minio-production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: production
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
spec:
  tls:
    - hosts:
      - production-user-files.workbenchdata.com
      secretName: production-user-files.workbenchdata.com-secret
  rules:
    - host: production-user-files.workbenchdata.com
      http:
        paths:
          - path: /
            backend:
              serviceName: minio-service
              servicePort: 80
